--- a/principal.css
+++ b/principal.css
@@ -1,3 +1,148 @@
+
+body{
+    background: linear-gradient(45deg, bisque, rgb(245, 187, 80));
+
+    margin: 0px;
+}
+header{
+    width: 100%;
+    height: 10vh;
+    
+    background-color: bisque;
+    
+    display: flex;
+    
+    align-items: center;
+    justify-content: space-between;
+}
+
+.imgheader{
+    width: 5rem;
+}
+
+.tiheader{
+    width: 100%;
+    
+    text-align: center;
+}
+
+nav{
+    display: flex;
+    background-color: bisque;
+    height: 5vh;
+
+    align-items: center;
+    padding: 10px;
+    margin: 10px 0px 10px 0px;
+    
+    position: sticky;
+    top: 0rem;
+}
+
+nav ul{
+    display: flex;
+    width: 100%;
+
+    list-style: none;
+
+    align-items: center;
+    justify-content: space-evenly;
+    
+    padding: 0rem;
+    margin: 0rem;
+}
+
+a{
+    text-decoration: none;
+}
+
+main{
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+}
+
+.titulo{
+    padding: 60px 10px 10px 10px;
+}
+
+.artista{
+    max-width: 90%;
+
+    display: grid;
+    
+    grid-template-columns: repeat(2, minmax(20%, 45%));
+    grid-template-rows: repeat(1, auto auto);
+
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+
+    gap: 2rem 2rem;
+
+    overflow: hidden;
+    margin: 0% 0px 5% 0px;
+}
+
+.album, .video, .Datos, .Reseña{
+    display: flex;
+
+    max-width: 90%;
+    max-height: 90%;
+    
+    border: solid red 1px;
+
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    padding: 15px 15px 15px 15px;
+    margin: 0px;
+}
+
+figure>img{
+    max-width: 70%;
+}
+
+.Datos div h1, .Reseña div h1{
+    text-align: center;
+}
+
+footer{
+    background-color: black;
+    
+    display: grid;
+
+    grid-template-columns: 65% 15%;
+    
+    color: white;
+
+    gap: 0rem 2rem;
+
+    align-items: center;
+    justify-content: center;
+    
+    margin: 0px;
+    padding: 10px 0px 10px 0px;
+}
+
+.agradecimientos > p{
+    text-align: center;
+}
+
+.iconos{
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+}
+
+/*
+
 #contenido{
     width: 1500px;
     border: 1px salmon solid;
@@ -46,3 +191,5 @@ section{
   margin: 3px;
   float: left;
 }
+
+*/
